--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@material-tailwind/react": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.19.0"
+    "react-router-dom": "^6.19.0",
+    "react-social-icons": "^6.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
